# cog

./: .gitignore  README.md
cog/: Cargo.toml
cog/src/: lib.rs  main.rs
cog/tests/: workflow_tests.rs
data/: steam_data_clean_cls.csv
py/: info.toml  main.py  polars_steam.py  pyproject.toml  steam_wip.py
py/src/: logging.json  logging.yaml  steam.py
py/src/cogpy/core/: _utils.py  constants.py  models.py  sync.py  types.py
py/src/cogpy/core/models/: __init__.py  notes.py  vault.py
py/src/cogpy/steam/: __init__.py  steam.py  steam_clean.py
py/src/cogpy/utils/: logging.toml  make_title.py  utils.py
rhg/: Cargo.toml
rhg/src/: lib.rs  main.rs
rhg/tests/: integration_test.rs
steam_data/: steam_analysis_classification.py  steam_regression_analysis.py
steam_data/data/: steam_data_clean.csv
