[package]
name = "cog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.8"
home = "0.5.12"
walkdir = "2.5.0"
toml = "1.0.3"
colored = "3.1.1"
glob = "0.3.3"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3" # Essential for safely testing file I/O
