[package]
name = "note_tagger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.8"

[dev-dependencies]
tempfile = "3" # Essential for safely testing file I/O
